# publication_service

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  setup.cfg
api/: .gitignore  Dockerfile  docker-compose.yml  f3cdde.pub  pyproject.toml  pytest.ini
api/publicationExpress/: settings.py  urls.py
api/publisher/: urls.py  views.py
api/publisher/commute/: budgeter.py  commuter.py  cropper.py  driver.py  freplace.py  fstring.py  standarder.py
api/publisher/commute/macros/: set_dou.vbs  totalclean.dotm  totalclean.vbs
api/tests/: conftest.py  test_create_api.py
documents/model/: default.docx
front/: Dockerfile  manage.py  pyproject.toml  requirements.txt
front/publicationExpress/: settings.py  urls.py  wsgi.py
front/publisher/: admin.py  forms.py  models.py  serializer.py  views.py
front/publisher/commute/: fstring.py
front/publisher/migrations/: 0001_initial.py
front/publisher/templates/: index.html  result.html  result_fail.html
publicationExpress/: asgi.py  settings.py  urls.py
publisher/: decorators.py  domain.py  http.py  urls.py  views.py
publisher/commute/: budgeter.py  commuter.py  cropper.py  driver.py  freplace.py  fstring.py  standarder.py
publisher/repository/: adjust_files.py  calculations.py  checking_input.py  extension_file_manipulation.py  input.py
publisher/validator/: validator_extesion.py
tests/: PV-3_AGazeta-TO_DFSDFSDF_Sema_2_2xheight.docx  conftest.py  test_budgeter.py  test_commute.py  test_create_api.py  test_cropper.py  test_driver.py  test_standarder.py
tests/create_publication/: test_create_api.py
(+4 files in other folders)
